[gd_scene load_steps=6 format=2]

[ext_resource path="res://BossFireball.gd" type="Script" id=1]
[ext_resource path="res://Sprites/items/Fireball1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/items/Fireball2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0

[node name="BossFireball" type="Area2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.53674e-07, -4.76837e-07 )
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 1 )
animation = "shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 1 )
rotation = 1.5708
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 3, 1 )
scale = Vector2( 1.3, 0.9 )
[connection signal="area_entered" from="." to="." method="_on_Fireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
